# ScikitLearnButDIY

./: .gitignore  CMakeLists.txt  README.md
data/: lol.csv
examples/: multiple_regression.cpp  single_weight_example.cpp
include/HomemadeScikit/: column.h  data_settings.h  dataset.h  model.h  utils.h
src/: dataset.cpp  model.cpp  utils.cpp
tests/: test_dataset.cpp
